Layout saving + TSIM handler

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>100worlds</title>
+    <title>sim_web_ui</title>
     <style>
 body {
     font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI","Ubuntu","Roboto","Noto Sans","Droid Sans",sans-serif;
