Use exchange name to distinguish save layouts for different sims

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,7 @@ code {
 <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-base.css" />
 <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-dark-theme.css" />
 
+<script>const EXCHANGE_NAME = {{ exchange_name | tojson }};</script>
 <script src="{{ url_for('static', filename='js-built/index.js') }}"></script>
 
 </body>
