--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,16 @@
+<!doctype html>
 <html>
 <head>
-    <title>sim_web_ui</title>
+    <title>{{ exchange_name }} | sim_web_ui</title>
     <style>
 body {
     font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI","Ubuntu","Roboto","Noto Sans","Droid Sans",sans-serif;
     {#font-size: 10pt;#}
-    color: #888;
     margin: 0;
+}
+
+.lm_content {
+    color: #eee;
 }
 
 code {
@@ -14,19 +18,27 @@ code {
     font-size: 9pt;
 }
 
-.status-bar {
-    background-color: #afc1c6;
-    font-weight: bold;
-    padding: 5px 8px;
+#app-container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
 
-    display: inline-block;
+#top-bar {
+    padding: 5px 8px;
+}
+
+#layout-container {
+    flex-grow: 1;
+    overflow: hidden;
 }
     </style>
 </head>
 <body>
 
 <div id="app-container">
-{#    <div style="text-align: right; position: fixed; width: 100%; z-index: 100"><div class="status-bar">[[ statusText ]]</div></div>#}
+    <div id="top-bar">[[statusText]]</div>
+    <div id="layout-container"></div>
 
 <!--    <div v-for="object in data.objects">-->
 <!--        <h4>[[object.displayName]] <code>[[object.name]]: [[object.mimeType]]</code></h4>-->
@@ -39,8 +51,6 @@ code {
 {#    </div>#}
 
 </div>
-
-{#<div id="layout-container" style="width: 100vw; height: 100vh"></div>#}
 
 {#<script src="{{ url_for('static', filename='cbor.js') }}" type="text/javascript"></script>#}
 {#<script src="https://unpkg.com/vue@3"></script>#}
