GoldenLayout: switch to light theme

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@ body {
 }
 
 .lm_content {
-    color: #eee;
+    color: #333;
 }
 
 code {
@@ -58,7 +58,7 @@ code {
 {#<script type="text/javascript" src="https://golden-layout.com/files/latest/js/goldenlayout.min.js"></script>#}
 
 <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-base.css" />
-<link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-dark-theme.css" />
+<link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-light-theme.css" />
 
 <script>const EXCHANGE_NAME = {{ exchange_name | tojson }};</script>
 <script src="{{ url_for('static', filename='js-built/index.js') }}"></script>
